--- a/projects/index.html
+++ b/projects/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janice Rincon: Personal Site and portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Projects</title>
+    <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="/projects/index.html">Projects</a>
         <a href="/contact/index.html">Contact</a>
         <a href="/resume/index.html">Resume</a>
         <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
     </nav>
-    <h1>Janice Rincon</h1>
-    <p>I am a Data Science student at UCSD. This is my portfolio website</p>
-    <img src="images/me.JPG" alt="A headshot of Janice Rincon"/>
+    <h1>Projects</h1>
 </body>
 </html>
