--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="/projects/index.html">Projects</a>
-        <a href="/contact/index.html">Contact</a>
-        <a href="/resume/index.html">Resume</a>
+        <a href="./projects/index.html">Projects</a>
+        <a href="./contact/index.html">Contact</a>
+        <a href="./resume/index.html">Resume</a>
         <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
     </nav>
     <h1>Janice Rincon</h1>
