--- a/resume/index.html
+++ b/resume/index.html
@@ -11,9 +11,9 @@
 <body>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="/projects/index.html">Projects</a>
-        <a href="/contact/index.html">Contact</a>
-        <a href="/resume/index.html">Resume</a>
+        <a href="./projects/index.html">Projects</a>
+        <a href="./contact/index.html">Contact</a>
+        <a href="./resume/index.html">Resume</a>
         <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
     </nav>
     <section>
