Revised bio text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
     </nav>
     <h1>Janice Rincon</h1>
-    <p>I am a Data Science student at UCSD. This is my portfolio website</p>
+    <p>Hi! I’m a Data Science student at the UC San Diego passionate about
+        machine learning, statistical modeling, and data visualization.
+        I enjoy working on projects that combine technical problem-solving with 
+        real-world impact.</p>
     <img src="images/me.JPG" alt="A headshot of Janice Rincon"/>
 </body>
 </html>
