--- a/contact/index.html
+++ b/contact/index.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="../style.css" />
-</heasd>
+</head>
 
 <body>
     <nav>
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
+        <a href="../contact/index.html" class="current">Contact</a>
         <a href="../resume/index.html">Resume</a>
         <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
     </nav>
-    <h1>Contact</h1>
+    <h1>Contact Me</h1>
     <form action="mailto:jrinconrodriguez@ucsd.edu" method="post" enctype="text/plain">
-        <label for="email">Email:
-            <input name="email" type="email" value="example@email.com">
-        </label>
-        <label for="subject">Subject:
-            <input name="subject" value="Subject line">
-        </label>
-        <label for="body">Body:
-            <textarea name="body">Sample text</textarea>
-        </label>
+        <label for="email">Email:</label>
+        <input name="email" type="email" value="example@email.com">
+
+        <label for="subject">Subject:</label>
+        <input name="subject" value="Subject line">
+
+        <label for="body">Body:</label>
+        <textarea name="body">Sample text</textarea>
+        
         <button>Submit</button>
     </form>
 </body>
