--- a/projects/index.html
+++ b/projects/index.html
@@ -9,11 +9,74 @@
 <body>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
+        <a href="../projects/index.html" class="current">Projects</a>
         <a href="../contact/index.html">Contact</a>
-        <a href="../resume/index.html">Resume</a>
+        <a href="../resume/index.html" >Resume</a>
         <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
     </nav>
     <h1>Projects</h1>
+    <!-- Dummy content -->
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellendus hic maxime eligendi ex impedit totam ipsam sapiente deleniti est eveniet alias rem esse, ad dolores accusamus sint velit autem.</p>
+        </article>
+        <article>
+            <h2>Reprehenderit dolores eos commodi.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dolorem ad labore earum sequi, explicabo in obcaecati porro eius ex qui, voluptatibus facere consequatur veniam sapiente! Ipsam ratione tempore deserunt ipsum, hic reiciendis saepe, suscipit molestias natus, laboriosam fuga!</p>
+        </article>
+        <article>
+            <h2>Repudiandae nulla maxime non!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Libero sapiente nam ut esse qui et, vero illum hic eaque quidem autem nemo, laboriosam aperiam laudantium, tempore culpa perferendis eius quo deleniti aliquam obcaecati iure velit! Beatae, saepe corrupti!</p>
+        </article>
+        <article>
+            <h2>Qui doloribus non tempore?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Et dicta vitae ullam ipsa dolorem, eos, expedita dolores, tempora sint obcaecati corporis necessitatibus iure autem aliquam placeat. Facere perferendis molestiae, quasi at asperiores explicabo dignissimos laboriosam hic numquam consequatur?</p>
+        </article>
+        <article>
+            <h2>Eveniet rerum minus illum.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Libero, facilis! Temporibus aspernatur deleniti similique qui facere possimus eaque nulla officia atque officiis, dolorum ea id, placeat alias voluptatum iusto odio beatae dolores quae? Molestiae magnam tempora officiis dolorem!</p>
+        </article>
+        <article>
+            <h2>Culpa repellat perferendis asperiores?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Fuga doloremque ex voluptatum commodi quasi tempore perferendis soluta iste necessitatibus, quo sed adipisci minus cupiditate alias porro perspiciatis possimus quae iusto. Ratione, natus? Velit ex quas unde cumque quod.</p>
+        </article>
+        <article>
+            <h2>Aperiam et quidem perferendis!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Animi accusantium perferendis pariatur aperiam eos mollitia hic ad aspernatur deleniti soluta modi voluptatum necessitatibus placeat consectetur distinctio ab quidem quas fugiat consequatur dolores quaerat corrupti dolorem, ipsam inventore. Natus?</p>
+        </article>
+        <article>
+            <h2>Consequuntur error suscipit natus?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Voluptatem repellat sint cupiditate nobis omnis delectus blanditiis eos consequatur voluptates! Consectetur, dicta expedita mollitia repudiandae quisquam blanditiis amet! Natus et provident neque iure totam ipsam eos nisi perferendis dolores.</p>
+        </article>
+        <article>
+            <h2>Facilis ipsam alias blanditiis?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Illum esse dolore minima amet officiis maxime. Consequatur architecto ut quidem fuga, harum dolores vitae commodi vel tempore voluptate rerum dolore dolorum voluptas aspernatur ducimus porro, soluta enim ratione sapiente.</p>
+        </article>
+        <article>
+            <h2>Rerum illo saepe placeat?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Perspiciatis molestiae fugiat dolorum culpa ex incidunt nemo maiores? Odio nisi provident repellat praesentium, odit id amet nulla itaque reprehenderit sunt quas molestiae aliquam debitis officiis consectetur recusandae minus quos.</p>
+        </article>
+        <article>
+            <h2>Sed magni ullam cumque!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Iure eaque nulla ratione aspernatur minus ipsum ducimus nisi reiciendis similique doloremque ipsam quidem, est cum, magni deleniti saepe assumenda officiis. Beatae ut quidem provident illum optio commodi cum odit.</p>
+        </article>
+        <article>
+            <h2>Eligendi maxime natus aliquam.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dolor maxime earum, facere labore quam ratione voluptate ducimus distinctio? Similique sequi pariatur temporibus. Dolor quis non assumenda ipsa, nisi est a dolore cupiditate, fuga iste quaerat. Distinctio, necessitatibus cumque!</p>
+        </article>
+    </div>
 </body>
 </html> 
