--- a/resume/index.html
+++ b/resume/index.html
@@ -13,17 +13,19 @@
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
         <a href="../contact/index.html">Contact</a>
-        <a href="../resume/index.html">Resume</a>
+        <a href="../resume/index.html" class="current">Resume</a>
         <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
     </nav>
-    <section>
+    <contact>
         <h1>Janice Rincon</h1>
-        <span>
+        <div class="contact-info">
             <a href="mailto:jrinconrodriguez@ucsd.edu">jrinconrodriguez@ucsd.edu</a>
+            <p>|</p>
             <a href="tel:123-456-7899">123-456-7899</a>
+            <p>|</p>
             <p>San Diego, CA</p>
-        </span>
-    </section>
+        </div>
+    </contact>
     <experience>
         <h2>Work Experience</h2>
 
