New file 'global.js' and nav bar revision

--- a/resume/index.html
+++ b/resume/index.html
@@ -6,16 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <link rel="stylesheet" href="../style.css" />
+    <script type="module" src="../global.js"></script>
 </head>
 
 <body>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
-        <a href="../resume/index.html" class="current">Resume</a>
-        <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
-    </nav>
     <contact>
         <h1>Janice Rincon</h1>
         <div class="contact-info">
