--- a/contact/index.html
+++ b/contact/index.html
@@ -6,21 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="../style.css" />
+    <script type="module" src="../global.js"></script>
 </head>
 
 <body>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html" class="current">Contact</a>
-        <a href="../resume/index.html">Resume</a>
-        <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
-    </nav>
     <h1>Contact Me</h1>
-    <form action="mailto:jrinconrodriguez@ucsd.edu" method="post" enctype="text/plain">
-        <label for="email">Email:</label>
-        <input name="email" type="email" value="example@email.com">
-
+    <form action="mailto:jrinconrodriguez@ucsd.edu" method="GET">
         <label for="subject">Subject:</label>
         <input name="subject" value="Subject line">
 
