--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janice Rincon: Personal Site and portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <script type="module" src="global.js"></script>
 </head>
 <body>
-    <nav>
-        <a href="index.html" class="current">Home</a>
-        <a href="projects/index.html">Projects</a>
-        <a href="contact/index.html">Contact</a>
-        <a href="resume/index.html">Resume</a>
-        <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
-    </nav>
     <h1>Janice Rincon</h1>
     <p>Hi! I’m a Data Science student at the UC San Diego passionate about
         machine learning, statistical modeling, and data visualization.
