--- a/projects/index.html
+++ b/projects/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="../style.css" />
+    <script type="module" src="../global.js"></script>
 </head>
 <body>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html" class="current">Projects</a>
-        <a href="../contact/index.html">Contact</a>
-        <a href="../resume/index.html" >Resume</a>
-        <a href="https://github.com/rinconjm" target="_blank">GitHub Profile</a>
-    </nav>
     <h1>Projects</h1>
     <!-- Dummy content -->
     <div class="projects">
