Updates to homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janice Rincon: Personal Site and portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="global.js"></script>
+    <script src="global.js" type="module"></script>
+    <script src="index.js" type="module" defer></script>
 </head>
 <body>
     <h1>Janice Rincon</h1>
@@ -14,5 +15,12 @@
         I enjoy working on projects that combine technical problem-solving with 
         real-world impact.</p>
     <img src="images/me.JPG" alt="A headshot of Janice Rincon"/>
+    
+    <h2>Latest Projects</h2>
+    <div class="projects">
+    <!-- Dynamically added content will appear here -->
+    </div>
+    <h3>My GitHub Stats</h3>
+    <div class="dropdown" id="profile-stats"></div>
 </body>
 </html>
